syntax = "proto3";
package cluster.seed;
option csharp_namespace = "Proto.Cluster.Seed";
import "ClusterContracts.proto";

message JoinRequest {
  cluster.Member joiner = 1;
}

message JoinResponse {
  
}